open-flights/open-flights-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: main
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: open-flights-svc
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
